Dark Mode: Fix UI in Quote Page & Optimization

--- a/static/cdnjs/semantic-ui/2.4.1/semantic-dark.css
+++ b/static/cdnjs/semantic-ui/2.4.1/semantic-dark.css
@@ -30996,8 +30996,8 @@
  .ui.styled.accordion .accordion {
    border-radius: 0.28571429rem;
    background: #000000;
-   -webkit-box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15), 0px 0px 0px 1px rgba(34, 36, 38, 0.15);
-   box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15), 0px 0px 0px 1px rgba(34, 36, 38, 0.15);
+   -webkit-box-shadow: 0px 1px 2px 0 rgba(222, 220, 218, 0.15), 0px 0px 0px 1px rgba(222, 220, 218, 0.15);
+   box-shadow: 0px 1px 2px 0 rgba(222, 220, 218, 0.15), 0px 0px 0px 1px rgba(222, 220, 218, 0.15);
  }
  
  .ui.styled.accordion .title,
@@ -31998,7 +31998,7 @@
  ---------------*/
  
  .ui.dimmer {
-   background-color: rgba(255, 255, 255, 0.85);
+   background-color: rgba(40 ,40, 40, 0.85);
  }
  
  .ui.dimmer > .content > * {
@@ -33948,13 +33948,13 @@
  .ui.modal > .header {
    display: block;
    font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-   background: #FFFFFF;
+   background: #000000;
    margin: 0em;
    padding: 1.25rem 1.5rem;
    -webkit-box-shadow: none;
    box-shadow: none;
-   color: rgba(0, 0, 0, 0.85);
-   border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+   color: rgba(255, 255, 255, 0.85);
+   border-bottom: 1px solid rgba(222, 220, 218, 0.15);
  }
  
  .ui.modal > .header:not(.ui) {
@@ -33973,7 +33973,7 @@
    font-size: 1em;
    line-height: 1.4;
    padding: 1.5rem;
-   background: #FFFFFF;
+   background: #000000;
  }
  
  .ui.modal > .image.content {
@@ -34050,7 +34050,7 @@
  ---------------*/
  
  .ui.modal > .actions {
-   background: #F9FAFB;
+   background: #070504;
    padding: 1rem 1rem;
    border-top: 1px solid rgba(34, 36, 38, 0.15);
    text-align: right;
@@ -34183,8 +34183,8 @@
  ---------------*/
  
  .ui.dimmer > .ui.modal {
-   -webkit-box-shadow: 1px 3px 10px 2px rgba(0, 0, 0, 0.2);
-   box-shadow: 1px 3px 10px 2px rgba(0, 0, 0, 0.2);
+   -webkit-box-shadow: 1px 3px 10px 2px rgba(255, 255, 255, 0.2);
+   box-shadow: 1px 3px 10px 2px rgba(255, 255, 255, 0.2);
  }
  
  /*******************************
@@ -34216,11 +34216,11 @@
  }
  
  .ui.dimmer > .basic.modal {
-   color: rgba(0, 0, 0, 0.87);
+   color: rgba(255, 255, 255, 0.87);
  }
  
  .ui.dimmer > .ui.basic.modal > .header {
-   color: rgba(0, 0, 0, 0.85);
+   color: rgba(255, 255, 255, 0.85);
  }
  
  /* Resort to margin positioning if legacy */
